# multilabel_classification_CMU-MOSEI

./: .gitignore  README.md  pyproject.toml
code/: check_points.md
code/1_eda/: 1_eda.ipynb
code/2_baseline/: 2_baselineffn.ipynb  2_datapreparation.ipynb
